MongoDB, login status bar, error handling

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,5 @@
 #Tue Jan 30 12:37:45 EST 2018
 jwt.secret.key=https://github.com/pmkent/angular-6-REST-userapp
-#mongo.db.name=myMongoDb
-#mongo.db.name=users
+mongo.db.name=userapp
 password.salt=https://github.com/pmkent/angular-6-REST-userapp
 token.expires.in=15
