--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,43 @@
 			<artifactId>json</artifactId>
 			<version>${org.json.version}</version>
 		</dependency>
+
+		<!-- Mondo Database Jongo dependendencies -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>${mongodb.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jongo</groupId>
+			<artifactId>jongo</artifactId>
+			<version>${jongo.version}</version>
+		</dependency>
+
+		<!-- Must have jackson dependencis once you add Mongo dependencies -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${fasterxml.jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${fasterxml.jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${fasterxml.jackson.version}</version>
+		</dependency>
+
+		<!-- POJO Mapping? -->
+		<dependency>
+			<groupId>org.mongojack</groupId>
+			<artifactId>mongojack</artifactId>
+			<version>${mongojack.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -134,5 +171,15 @@
 		<enunciate.version>2.10.1</enunciate.version>
 		<json.webtoken.version>0.9.0</json.webtoken.version>
 		<org.json.version>20171018</org.json.version>
+
+
+		<mongodb.version>3.6.1</mongodb.version>
+		<!--jongo.version>1.3.0</jongo.version-->
+		<jongo.version>1.4.0</jongo.version>
+
+		<fasterxml.jackson.version>2.9.7</fasterxml.jackson.version>
+
+		<!-- Pojo mapping? -->
+		<mongojack.version>2.9.4</mongojack.version>
 	</properties>
 </project>
