--- a/angular/angular.json
+++ b/angular/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-	      "src/themes.scss"
+              "src/themes.scss",
+              "node_modules/bulma/css/bulma.css"
             ],
             "scripts": []
           },
