--- a/angular/package.json
+++ b/angular/package.json
@@ -18,11 +18,14 @@
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.1.1",
+    "@angular/material-moment-adapter": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "bulma": "^0.7.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.23.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -47,6 +50,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.1.6"
   }
 }
